--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -1,31 +1,31 @@
 <!doctype html>
-%html{ lang="en" class="no-js" }
+%html{ :lang => "en", :class => "no-js" }
   %head
-    %meta{ charset="utf-8" }
+    %meta{ :charset => "utf-8" }
   
     <!-- www.phpied.com/conditional-comments-block-downloads/ -->
     <!--[if IE]><![endif]-->
   
     %title StaticMatic
 
-    %meta{ name="description" content="" }
-    %meta{ name="author" content="" }
+    %meta{ :name => "description", :content => "" }
+    %meta{ :name => "author", :content => "" }
   
     <!--  Mobile viewport optimized: j.mp/bplateviewport -->
-    %meta{ name="viewport" content="width=device-width; initial-scale=1.0" }
+    %meta{ :name => "viewport", :content => "width=device-width; initial-scale=1.0" }
 
-    %link{ rel="shortcut icon" href="/favicon.ico" }
-    %link{ rel="apple-touch-icon" href="/apple-touch-icon.png" }
+    %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
+    %link{ :rel => "apple-touch-icon", :href => "/apple-touch-icon.png" }
 
     = stylesheets
-    %link{ rel="stylesheet" href="css/style.css?v=1" }
+    %link{ :rel => "stylesheet", :href => "css/style.css?v=1" }
   
     <!-- For the less-enabled mobile browsers like Opera Mini -->
-    %link{ rel="stylesheet" media="handheld" href="css/handheld.css?v=1" }
+    %link{ :rel => "stylesheet", :media => "handheld", :href => "css/handheld.css?v=1" }
   
    
     <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-    %script{ src="js/modernizr-1.5.min.js" }
+    %script{ :src => "js/modernizr-1.5.min.js" }
 
   <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
   
@@ -47,25 +47,24 @@
       %footer
         footer!
 
-    %script{ src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" }
+    %script{ :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" }
     %script
       !window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>');
   
   
-    %script{ src="js/plugins.js?v=1" }
-    %script{ src="js/script.js?v=1" }
+    %script{ :src => "js/plugins.js?v=1" }
+    %script{ :src => "js/script.js?v=1" }
   
     <!--[if lt IE 7 ]>
-    %script{ src="js/dd_belatedpng.js?v=1" }
+    %script{ :src => "js/dd_belatedpng.js?v=1" }
     <![endif]-->
 
     <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet -->
     %script
-     var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
-     (function(d, t) {
-      var g = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
+      var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
+      (function(d, t) {
+      var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
       g.async = true;
       g.src = '//www.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g, s);
-     })(document, 'script');
+      })(document, 'script');
