--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -6,10 +6,10 @@
     <!-- www.phpied.com/conditional-comments-block-downloads/ -->
     <!--[if IE]><![endif]-->
   
-    %title StaticMatic
+    %title codepuzzle - Ruby on Rails Freelancer - Anton Mikulcic
 
-    %meta{ :name => "description", :content => "" }
-    %meta{ :name => "author", :content => "" }
+    %meta{ :name => "description", :content => "Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects :>" }
+    %meta{ :name => "author", :content => "Anton Mikulcic" }
   
     <!--  Mobile viewport optimized: j.mp/bplateviewport -->
     %meta{ :name => "viewport", :content => "width=device-width; initial-scale=1.0" }
@@ -18,14 +18,15 @@
     %link{ :rel => "apple-touch-icon", :href => "/apple-touch-icon.png" }
 
     = stylesheets
-    %link{ :rel => "stylesheet", :href => "css/style.css?v=1" }
   
     <!-- For the less-enabled mobile browsers like Opera Mini -->
-    %link{ :rel => "stylesheet", :media => "handheld", :href => "css/handheld.css?v=1" }
-  
+    %link{ :rel => "stylesheet", :media => "handheld", :href => "stylesheets/handheld.css?v=1" }
    
-    <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-    %script{ :src => "js/modernizr-1.5.min.js" }
+    %script{ :type => "text/javascript", :src => "javascripts/modernizr-1.5.min.js" }
+
+    %script{ :type => "text/javascript", :src => "http://use.typekit.com/evc4jlz.js" }
+    %script{ :type => "text/javascript" }
+      try{Typekit.load();}catch(e){}
 
   <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
   
@@ -39,24 +40,27 @@
   
     #container
       %header
-        header!
-      
+        #logo
+          %a{ :href => "http://www.codepuzzle.de/" }
+            %img{ :src => "codepuzzle.png", :alt => "Codepuzzle Software - Anton Mikulcic" }
+        %span.visuallyhidden
+          %img{ :src => "codepuzzle_icon.png", :alt => "Codepuzzle Software - Anton Mikulcic" }
+
       #main
         =yield
-      
+
       %footer
-        footer!
+        &copy; 2010
 
     %script{ :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" }
     %script
       !window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>');
-  
-  
-    %script{ :src => "js/plugins.js?v=1" }
-    %script{ :src => "js/script.js?v=1" }
-  
+
+    %script{ :src => "javascripts/plugins.js?v=1" }
+    %script{ :src => "javascripts/script.js?v=1" }
+
     <!--[if lt IE 7 ]>
-    %script{ :src => "js/dd_belatedpng.js?v=1" }
+    %script{ :src => "javascripts/dd_belatedpng.js?v=1" }
     <![endif]-->
 
     <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet -->
