--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -1,1 +1,21 @@
-%h1 StaticMatic!
+.content
+  %h1 Hi, my name is Anton Mikulcic
+  
+  %p I'm a professional software developer from Munich/ Germany and I used to be a Java Geek until I found Ruby on Rails. Yay!
+  %p Codepuzzle is my freelancer promotion label and stands for a self-imposed dogma of writing efficient and reusable code that <i>fits</i>.
+  %p
+    You can
+    %span.eyecatcher <script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('hire me<span>hire me</span></a>'); /*]]>*/</script>
+    for outrageous and cutting-edge projects or join my <a href="http://www.xing.com/profile/Anton_Mikulcic" target="_blank">XING</a>-Network.
+
+.content.imprint
+  %p.anton
+    %a{ :href => "http://www.codepuzzle.de/" } Anton Mikulcic
+    %br
+    Hans-Mielich-Str. 26
+    %br
+    81543 Munich / Germany
+  %p
+    0151&nbsp;<span style="display: none;">12 34 56 78 90</span>/&nbsp;<span style="display: none;">12 34 56 78 90</span>27&nbsp;<span style="display: none;">12 34 56 78 90</span>03&nbsp;<span style="display: none;">12 34 56 78 90</span>84&nbsp;<span style="display: none;">12 34 56 78 90</span>42
+  %p
+    <script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;');document.write('</a>'); /*]]>*/</script>
