--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -17,16 +17,11 @@
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %link{ :rel => "apple-touch-icon", :href => "/apple-touch-icon.png" }
 
-    = stylesheets
-  
-    <!-- For the less-enabled mobile browsers like Opera Mini -->
-    %link{ :rel => "stylesheet", :media => "handheld", :href => "stylesheets/handheld.css?v=1" }
-   
-    %script{ :type => "text/javascript", :src => "javascripts/modernizr-1.5.min.js" }
+    %link{ :href => "http://fonts.googleapis.com/css?family=OFL+Sorts+Mill+Goudy+TT:regular,italic", :rel => "stylesheet", :type => "text/css" }
+    %link{ :rel => "stylesheet", :href => "/stylesheets/boilerplate.css", :type => "text/css", :media => "all" }
+    %link{ :rel => "stylesheet", :href => "/stylesheets/screen.css", :type => "text/css", :media => "all" }
 
-    %script{ :type => "text/javascript", :src => "http://use.typekit.com/evc4jlz.js" }
-    %script{ :type => "text/javascript" }
-      try{Typekit.load();}catch(e){}
+    %script{ :type => "text/javascript", :src => "javascripts/modernizr-1.5.min.js" }
 
   <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
   
@@ -46,25 +41,34 @@
         %span.visuallyhidden
           %img{ :src => "codepuzzle_icon.png", :alt => "Codepuzzle Software - Anton Mikulcic" }
 
+      %hr
+
       #main
         =yield
 
+      %hr
+
       %footer
-        &copy; 2010
+        %p &copy; Anton Mikulcic 2010
 
-    %script{ :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" }
-    %script
-      !window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>');
+    %script{ :type => "text/javascript" }
+      var c=document.getElementById('container');if(navigator.userAgent.toLowerCase().match('chrome')&&c)c.className+=' chrome';
 
-    %script{ :src => "javascripts/plugins.js?v=1" }
-    %script{ :src => "javascripts/script.js?v=1" }
+    %script{ :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", :type => "text/javascript" }
+    %script{ :type => "text/javascript" }
+      !window.jQuery && document.write('<script src="javascripts/jquery-1.4.2.min.js"><\/script>');
+
+    %script{ :src => "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js", :type => "text/javascript" }
+
+    %script{ :src => "javascripts/plugins.js?v=1", :type => "text/javascript" }
+    %script{ :src => "javascripts/script.js?v=1", :type => "text/javascript" }
 
     <!--[if lt IE 7 ]>
-    %script{ :src => "javascripts/dd_belatedpng.js?v=1" }
+    %script{ :src => "javascripts/dd_belatedpng.js?v=1", :type => "text/javascript" }
     <![endif]-->
 
     <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet -->
-    %script
+    %script{ :type => "text/javascript" }
       var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
       (function(d, t) {
       var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
