--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -10,9 +10,6 @@
 
     %meta{ :name => "description", :content => "Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects :>" }
     %meta{ :name => "author", :content => "Anton Mikulcic" }
-  
-    <!--  Mobile viewport optimized: j.mp/bplateviewport -->
-    %meta{ :name => "viewport", :content => "width=device-width; initial-scale=1.0" }
 
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %link{ :rel => "apple-touch-icon", :href => "/apple-touch-icon.png" }
@@ -60,16 +57,14 @@
 
     %script{ :src => "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js", :type => "text/javascript" }
 
-    %script{ :src => "javascripts/plugins.js?v=1", :type => "text/javascript" }
     %script{ :src => "javascripts/script.js?v=1", :type => "text/javascript" }
 
     <!--[if lt IE 7 ]>
     %script{ :src => "javascripts/dd_belatedpng.js?v=1", :type => "text/javascript" }
     <![endif]-->
 
-    <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet -->
     %script{ :type => "text/javascript" }
-      var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
+      var _gaq = [['_setAccount', 'UA-5508260-1'], ['_trackPageview']];
       (function(d, t) {
       var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
       g.async = true;
