--- a/src/stylesheets/screen.sass
+++ b/src/stylesheets/screen.sass
@@ -68,6 +68,8 @@ header, footer
   +border-radius(5px, 5px)
 
 .ie6, .ie7
+  hr
+    margin: $space-between-containers / 4
   #portrait
     margin-top: 20px
 
@@ -78,17 +80,29 @@ div.post
   display: none
   padding: 0 135px
 
+  p:last-child
+    text-align: center
+    a
+      font-size: 0.8em
+      &:after
+        content: ' ▸'
+      &.back
+        &:after
+          content: ''
+        &:before
+          content: ' ◂'
+
 .eyecatcher
   font-size: 2em
   a
     display: inline-block
-    +rotate(-3deg, 0, 0)
+    +rotate(-3deg, 60px, 60px)
     span
-      +opacity(0.4)
+      +opacity(0.6)
       color: #C80000
       display: block
       font-size: 40px
-      margin-left: -20px
+      margin-left: -10px
       margin-top: -35px
       position: absolute
       visibility: hidden
@@ -99,6 +113,20 @@ div.post
     &:hover
       span
         visibility: visible
-        font-size: 100px
+        font-size: 150px
+        margin-left: -50px
+        margin-top: 0px
         +opacity(0)
         +rotate(-15deg, 0, 0)
+
+//
+
+p.address
+  text-align: right
+
+.highlighted
+  color: #C80000
+
+#skype
+  position: absolute
+  margin-top: 50px
