--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -8,7 +8,7 @@
   
     %title codepuzzle - Ruby on Rails Freelancer - Anton Mikulcic
 
-    %meta{ :name => "description", :content => "Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects :>" }
+    %meta{ :name => "description", :content => "Anton Mikulcic, Ruby on Rails and Frontend Artist. Hire me for agile software projects." }
     %meta{ :name => "author", :content => "Anton Mikulcic" }
 
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
@@ -20,16 +20,14 @@
 
     %script{ :type => "text/javascript", :src => "javascripts/modernizr-1.5.min.js" }
 
-  <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-  
-  <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
-  <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
-  <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
-  <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
-  <!--[if (gt IE 9)|!(IE)]><!-->
+    <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
+    <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
+    <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
+    <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
+    <!--[if (gt IE 9)|!(IE)]><!-->
   %body
     <!--<![endif]-->
-  
+
     #container
       %header
         #logo
@@ -57,6 +55,7 @@
 
     %script{ :src => "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js", :type => "text/javascript" }
 
+    %script{ :src => "javascripts/plugins.js?v=1", :type => "text/javascript" }
     %script{ :src => "javascripts/script.js?v=1", :type => "text/javascript" }
 
     <!--[if lt IE 7 ]>
