--- a/src/layouts/default.haml
+++ b/src/layouts/default.haml
@@ -46,6 +46,8 @@
       %footer
         %p &copy; Anton Mikulcic 2010
 
+    <a href="http://github.com/codepuzzle/codepuzzle" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+
     %script{ :type => "text/javascript" }
       var c=document.getElementById('container');if(navigator.userAgent.toLowerCase().match('chrome')&&c)c.className+=' chrome';
 
@@ -55,7 +57,6 @@
 
     %script{ :src => "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js", :type => "text/javascript" }
 
-    %script{ :src => "javascripts/plugins.js?v=1", :type => "text/javascript" }
     %script{ :src => "javascripts/script.js?v=1", :type => "text/javascript" }
 
     <!--[if lt IE 7 ]>
