--- a/src/pages/index.haml
+++ b/src/pages/index.haml
@@ -6,7 +6,7 @@
   %p Up to now I design and develop web applications. People also like me to implement their UX related stuff like jQuery or experimental CSS.
   %p
     You can
-    %span.eyecatcher <script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('hire me<span>hire me</span></a>'); /*]]>*/</script>
+    %span#eyecatcher.eyecatcher
     for outrageous and cutting-edge projects or join my <a href="http://www.xing.com/profile/Anton_Mikulcic" target="_blank">XING</a>-Network.
   %p
     %a.continue{ :href => '#imprint' }
@@ -27,8 +27,7 @@
     81543 Munich / Germany
   %p.address.highlighted
     Phone: +49 151&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>/&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>27&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>03&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>84&nbsp;<span class="visuallyhidden">12 34 56 78 90</span>42
-  %p.address
-    <script TYPE="text/javascript">/*<![CDATA[*/ document.write('<a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;">');document.write('&#97;&#110;&#x74;&#x6f;');document.write('&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;');document.write('&#x6c;&#x65;&#x2e;&#100;&#x65;');document.write('</a>'); /*]]>*/</script>
+  %p#m.address
   %p
-    %a.back.continue{ :href => '#home' }
+    %a.back.continue{ :href => '#about' }
       Back
