Implement vimify plain text structure

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,39 +2,37 @@
   <title>Anton Mikulcic - Software Developer - Ruby, Rails, Javascript</title>
 <% end%>
 
-<% content_for :filename, 'index.html' %>
+<% content_for :filename, 'index' %>
 
-<ol id="vim-content">
-  <li><code>Anton Mikulcic</code></li>
-  <li><code></code></li>
-  <li><code>  Software Developer</code></li>
-  <li><code></code></li>
-  <li><code>  I'm a passionate Ruby and Javascript hero from Munich.</code></li>
-  <li><code></code></li>
-  <li><code>  Feel free to contact me if you're looking for technical consultancy or a freelance software expert.</code></li>
-  <li><code></code></li>
-  <li><code></code></li>
-  <li><code></code></li>
-  <li><code>Buzzwords I'm totally into:</code></li>
-  <li><code></code></li>
-  <li><code>  Agile, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3</code></li>
-  <li><code></code></li>
-  <li><code></code></li>
-  <li><code>Contact:</code></li>
-  <li><code></code></li>
-  <li><code>  E-mail:</code></li>
-  <li><code>    <a href="mailto:anton@codepuzzle.de">anton@codepuzzle.de</a></code></li>
-  <li><code></code></li>
-  <li><code>  Skype:</code></li>
-  <li><code>    <a href="skype:codepuzzle?call">codepuzzle</a></code></li>
-  <li><code></code></li>
-  <li><code>  Phone:</code></li>
-  <li><code>    +49 151 / 27 03 84 42</code></li>
-  <li><code></code></li>
-  <li><code>  Post:</code></li>
-  <li><code>    Anton Mikulcic</code></li>
-  <li><code>    Codepuzzle Software</code></li>
-  <li><code>    Schyrenstr. 5</code></li>
-  <li><code>    81543 Munich</code></li>
-  <li><code>    GERMANY</code></li>
-</ol>
+Anton Mikulcic
+
+  Software Developer
+
+  I'm a passionate Ruby and Javascript hero from Munich.
+
+  Feel free to contact me if you're looking for technical consultancy or a freelance software expert.
+
+
+
+Buzzwords I'm totally into:
+
+  Agile, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3
+
+
+Contact:
+
+  E-mail:
+    <a href="mailto:anton@codepuzzle.de">anton@codepuzzle.de</a>
+
+  Skype:
+    <a href="skype:codepuzzle?call">codepuzzle</a>
+
+  Phone:
+    +49 151 / 27 03 84 42
+
+  Post:
+    Anton Mikulcic
+    Codepuzzle Software
+    Schyrenstr. 5
+    81543 Munich
+    GERMANY
