Implement basic caret movement

--- a/source/layout.erb
+++ b/source/layout.erb
@@ -68,7 +68,7 @@
         <pre></pre>
       </div>
       <div id="main" role="main">
-        <pre id="vimify"><%= yield %></pre>
+        <p id="vimify"><%= yield %></p>
         <ol id="vim-content"></ol>
         <pre>~
 ~
