Enable line- and caret position display

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,9 +14,9 @@ Anton Mikulcic
 
 
 
-Buzzwords I'm totally into:
+Buzzwords about my profesion:
 
-  Agile, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3
+  Agile, Scrum, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3
 
 
 Contact:
