--- a/source/layout.erb
+++ b/source/layout.erb
@@ -65,22 +65,19 @@
             </ol>
           </li>
         </ol>
-        <pre></pre>
+        <pre id="nerdtree-tildes"></pre>
       </div>
       <div id="main" role="main">
         <p id="vimify"><%= yield %></p>
         <ol id="vim-content"></ol>
-        <pre>~
-~
-~
-~</pre>
+        <pre id="main-tildes"></pre>
       </div>
     </div>
     <footer id="footer">
       <span id="filename"><%= yield_content :filename %></span>
       <span id="content-changed">[+]</span>
       <span id="caret-position"></span>
-      <span id="caret-percentage"></span>
+      <span id="caret-percentage">Top</span>
     </footer>
   </div> <!--! end of #container -->
 <pre id="ascii">
