--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,7 +22,7 @@ Buzzwords about my profesion:
 Contact:
 
   E-mail:
-    <a href="mailto:anton@codepuzzle.de">anton@codepuzzle.de</a>
+    <a class="noitcerid" href="mailto:&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;">&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;</a>
 
   Skype:
     <a href="skype:codepuzzle?call">codepuzzle</a>
