--- a/source/layout.erb
+++ b/source/layout.erb
@@ -21,6 +21,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
   <%= stylesheet_link_tag "site.css" %>
+  <link media="only screen and (max-device-width: 480px)" href="/stylesheets/iphone.css" type="text/css" rel="stylesheet" />
   <%= yield_content :head %>
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
