--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,8 +13,7 @@ Anton Mikulcic
   Feel free to contact me if you're looking for technical consultancy or a freelance software expert.
 
 
-
-Buzzwords about my profesion:
+That's my work all about:
 
   Agile, Scrum, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3
 
