Add google analytics

--- a/source/layout.erb
+++ b/source/layout.erb
@@ -108,7 +108,7 @@ _/ ___\/  _ \ / __ |/ __ \\____ \|  |  \___   /\___   /  | _/ __ \
 
   <!-- Change UA-XXXXX-X to be your site's ID -->
   <script>
-    window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
+    window._gaq = [['_setAccount', 'UA-5508260-1'], ['_trackPageview'], ['_trackPageLoadTime']];
     Modernizr.load({
       load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
     });
