Implement graceful degradation for disabled javascript

--- a/source/layout.erb
+++ b/source/layout.erb
@@ -44,6 +44,13 @@
       s.parentNode.insertBefore(wf, s);
     })();
   </script>
+  <noscript>
+    <style type="text/css">
+      #vimify {
+        display: block;
+      }
+    </style>
+  </noscript>
 </head>
 
 <body class="<%= page_classes %>">
