--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,34 +4,34 @@
 
 <% content_for :filename, 'index' %>
 
-Anton Mikulcic
-
-  Software Developer
-
-  I'm a passionate Ruby and Javascript hero from Munich.
-
-  Feel free to contact me if you're looking for technical consultancy or a freelance software expert.
-
-
-Skills, Methods, Technologies I spend my time with:
-
+Anton Mikulcic<br>
+<br>
+  Software Developer<br>
+<br>
+  I'm a passionate Ruby and Javascript hero from Munich.<br>
+<br>
+  Feel free to contact me if you're looking for technical consultancy or a freelance software expert.<br>
+<br>
+<br>
+Skills, Methods, Technologies I spend my time with:<br>
+<br>
   Agile, Scrum, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3
-
-
-Contact:
-
-  E-mail:
-    <a class="noitcerid" href="mailto:&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;">&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;</a>
-
-  Skype:
-    <a href="skype:codepuzzle?call">codepuzzle</a>
-
-  Phone:
-    +49 151 / 27 03 84 42
-
-  Post:
-    Anton Mikulcic
-    Codepuzzle Software
-    Schyrenstr. 5
-    81543 Munich
+<br>
+<br>
+Contact:<br>
+<br>
+  E-mail:<br>
+    <a class="noitcerid" href="mailto:&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;">&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;</a><br>
+<br>
+  Skype:<br>
+    <a href="skype:codepuzzle?call">codepuzzle</a><br>
+<br>
+  Phone:<br>
+    +49 151 / 27 03 84 42<br>
+<br>
+  Post:<br>
+    Anton Mikulcic<br>
+    Codepuzzle Software<br>
+    Schyrenstr. 5<br>
+    81543 Munich<br>
     GERMANY
