--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -117,7 +117,11 @@ pre, li {
 
 #main {
   margin-left: $main-margin-left;
-  height: 518px;
+  height: 576px;
+}
+
+.gecko #main {
+  height: 610px;
 }
 
 #main, #nerdtree {
