Add link to Twitter and XING

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,6 +23,12 @@ Contact:<br>
   E-mail:<br>
     <a class="noitcerid" href="mailto:&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;">&#97;&#110;&#x74;&#x6f;&#110;&#64;&#x63;&#x6f;&#100;&#x65;&#112;&#117;&#x7a;&#122;&#x6c;&#x65;&#x2e;&#100;&#x65;</a><br>
 <br>
+  Twitter:<br>
+    <a href="http://twitter.com/silkstring" target="_blank">@silkstring</a><br>
+<br>
+  XING:<br>
+    <a href="https://www.xing.com/profile/Anton_Mikulcic" target="_blank">Anton Mikulcic @ XING</a><br>
+<br>
   Skype:<br>
     <a href="skype:codepuzzle?call">codepuzzle</a><br>
 <br>
