Improve index text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,9 +13,9 @@ Anton Mikulcic<br>
   Feel free to contact me if you're looking for technical consultancy or a freelance software expert.<br>
 <br>
 <br>
-Skills, Methods, Technologies I spend my time with:<br>
+Skills, Methods, Technologies my work is all about:<br>
 <br>
-  Agile, Scrum, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3
+  Agile, Scrum, XP, Vagrant, Chef, Git, TDD, BDD, RSpec, Cucumber, Jasmine, ReSTful API design, Ruby, Ruby on Rails, SQL, noSQL, MongoDB, Lucene, Solr, Sphinx, EventMachine, WebSocket, Frontend-Breakdance, Javascript, jQuery, Backbone.js, Coffeescript, HTML5, CSS3 - and this website is my tribute to <a href="http://www.vim.org/about.php" target="_blank">VIM</a>
 <br>
 <br>
 Contact:<br>
