--- a/source/layout.erb
+++ b/source/layout.erb
@@ -13,7 +13,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=2.5,maximum-scale=2.5">
 
   <%= stylesheet_link_tag "site.css" %>
   <link media="only screen and (max-device-width: 480px)" href="/stylesheets/iphone.css" type="text/css" rel="stylesheet" />
